// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications matches snapshot 1`] = `
<div
  className="Card__Body-sc-1o7sacr-2 kVpfjE"
>
  <div>
    <div
      className="Card__Group-sc-1o7sacr-0 jzDffS"
    >
      <div
        className="Card__Header-sc-1o7sacr-3 jGwlNH"
      >
        Updates Available
      </div>
      <p
        className="Card__P-sc-1o7sacr-1 bKishz"
      >
        Click below to use the most recent version of this software.
      </p>
    </div>
    <div
      className="Button__ButtonGroup-ayg7nk-1 fJPuTt"
    >
      <button
        className="Button-ayg7nk-0 fFJxez"
        onClick={[Function]}
      >
        Update
      </button>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot 2`] = `
<div
  className="Card__Body-sc-1o7sacr-2 kVpfjE"
>
  <div>
    <div
      className="Card__Group-sc-1o7sacr-0 jzDffS"
    >
      <div
        className="Card__Header-sc-1o7sacr-3 jGwlNH"
      >
        Privacy and cookies
      </div>
      <p
        className="Card__P-sc-1o7sacr-1 bKishz"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This site uses cookies to optimize your experience on our platform. By continuing to use this site you agree to use our cookies. If you'd like more information or would like to opt out please see our <a href=\\"/privacy-policy\\" target=\\"blank\\">Privacy Policy</a>",
          }
        }
      />
      <div
        className="Button__ButtonGroup-ayg7nk-1 fJPuTt"
      >
        <button
          className="Button-ayg7nk-0 fFJxez"
          onClick={[Function]}
        >
          Got it!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot 3`] = `
<div
  className="Card__Body-sc-1o7sacr-2 kVpfjE"
>
  <div>
    <div
      className="Card__Group-sc-1o7sacr-0 jzDffS"
    >
      <div
        className="Card__Header-sc-1o7sacr-3 jGwlNH"
      >
        Notification
      </div>
      <p
        className="Card__P-sc-1o7sacr-1 bKishz"
        dangerouslySetInnerHTML={
          Object {
            "__html": "asdf",
          }
        }
      />
    </div>
    <div
      className="Button__ButtonGroup-ayg7nk-1 fJPuTt"
    >
      <button
        className="Button-ayg7nk-0 fFJxez"
        onClick={[Function]}
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot for unknown notification 1`] = `null`;
